--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -44,6 +44,7 @@
 .login .btn {
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
   min-width: 200px;
   margin-top: 30px;
@@ -54,6 +55,9 @@
   transition: all 0.15s ease-in-out;
   cursor: pointer;
   box-shadow: 0 0 10px #4eb8dd;
+}
+.login .btn span {
+  margin-right: 10px;
 }
 
 .login .btn:hover {
