--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -87,6 +87,9 @@
 
 .home .item-desc_name {
   font-family: "Azeret Mono", monospace;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .home .item-desc_gender {
